# MCP-SERVER-POSTGRES

./: .gitignore  SENTIMENT_README.md  local_sentiment_model.py  log_util.py  main.py  postgres.py  pyproject.toml  run_sentiment.bat  sentiment.py
logs/: app.logger
