[project]
name = "postgres-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.3",
    "psycopg2-binary>=2.9.11",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain>=1.1.3",
]
